EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==10/29/2008
Derision: Mobs in water should no longer sink to the bottom.
cavedude00: Added rule to enable DeathExpLossMultiplier, or to use server code default.

Optional SQL:
Insert into rule_values values (0, 'Character:UseDeathExpLossMult', 'true');

==10/27/2008
seveianrex: Added server-side code for WAR sturdiness AA
Angelox: (Cbodmer) Experience loss based on cbodmers formula with added rule to regulate loss amount
Trevius: (Denivia) Added Critical Spell Damage for Lifetaps with the proper AAs

Optional SQL (options are 0-10, defaults to 3):
Insert into rule_values values (0, 'Character:DeathExpLossMultiplier', 3);

==10/26/2008
Derision: Implemented Bandolier. Test thoroughly before trusting it with your Epic.
Derision: Minor change to enable the spell Tiny Companion to work.

==10/25/2008
seveianrex: Slay Undead tweak + message gender fix, Tradeskill message gender fix
Trevius: Updated SQL file for R142 to correct some altadv_vars AA table issues with AA requirements

==10/24/2008
seveianrex: Implemented various GoD AAs: Coat of Thistles, Rapid Strikes, Elemental Durability, Subtlety2, Strengthened Strike, Vicious Smash
seveianrex: Implemented GoD Monk AA "Kick Mastery"
Trevius: Adjusted the new Frenzy AAs code to fix a crash
Trevius: Removed the Shield Block for Paladin/SK AA until code is revised and working
Trevius: (Denivia) Added Advanced Theft of Life and Soul Thief for Necros and SKs
Trevius: (Denivia) Added Death Peace AA
Trevius: (Denivia) Added Blur of Axes and Vicious Strike AAs for Berserkers
Trevius: (Denivia) Added Shield Block AA for Paladin/SK
Derision: 'Killing' LDoN chest type objects(e.g. Vermin Nests) will now update kill activities.
KLS: Revert Lag fixes that were causing movement and facing abnormalities.
KLS: Fix to a few problems with quest::creategroundobject that was causing it to not work in some situations.

==10/23/2008